--- a/feretui/resources/tests/snapshots/test_delete/test_delete/snapshot.html
+++ b/feretui/resources/tests/snapshots/test_delete/test_delete/snapshot.html
@@ -15,7 +15,7 @@
     </div>
    </div>
   </div>
-  <div class="columns">
+  <div class="columns is-desktop">
    <div class="column">
     <div class="columns is-vcentered is-hidden-print">
      <div class="column is-narrow">
