--- a/feretui/tests/snapshots/test_page/test_aside/snapshot.html
+++ b/feretui/tests/snapshots/test_page/test_aside/snapshot.html
@@ -1,4 +1,4 @@
-<div class="columns">
+<div class="columns is-desktop">
  <div class="column is-narrow footer pt-5 pb-5 is-hidden-print">
   <aside class="menu">
    <ul class="menu-list">
